--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,4 @@
-<%= @player_1_name %> vs. <%= @player_2_name %>
+<%= @player_1.name %> vs. <%= @player_2.name %>
 
-<%= @player_2_name %>: 60HP
+<%= @player_2.name %>: <%= @player_2.hit_points %>HP
 <a href='/attack'>Attack</a>
