--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,2 +1,2 @@
-<%= @player_1.name %> attacked <%= @player_2.name %>
+<%= @game.player_1_name %> attacked <%= @game.player_2_name %>
 <a href='/play'>Ok</a>
