--- a/views/play.erb
+++ b/views/play.erb
@@ -1,4 +1,4 @@
-<%= @player_1.name %> vs. <%= @player_2.name %>
+<%= @game.player_1_name %> vs. <%= @game.player_2_name %>
 
-<%= @player_2.name %>: <%= @player_2.hit_points %> HP
+<%= @game.player_2_name %>: <%= @game.player_2_hp %> HP
 <a href='/attack'>Attack</a>
