--- a/views/index.erb
+++ b/views/index.erb
@@ -2,11 +2,11 @@
 <h2>Sign in to play</h2>
 <form action="/names" method="post">
   <label for="player_1_name">
-    Player 1 name
+    Player 1 Name:
     <input type="text" name="player_1_name">
   </label>
   <label for="player_2_name">
-    Player 2 name
+    Player 2 Name:
     <input type="text" name="player_2_name">
   </label>
   <input type="submit" value="Submit">
