--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,6 @@
 <%= @game.player_1_name %> vs. <%= @game.player_2_name %>
 
-<%= @game.next_player %>: It is your turn!
+<%= @game.current_turn.name %>: It is your turn!
 
 <%= @game.player_1_name %>: <%= @game.player_1_hp %> HP
 <%= @game.player_2_name %>: <%= @game.player_2_hp %> HP
