28 - Adds multiplayer in roundabout way.

--- a/views/attack.erb
+++ b/views/attack.erb
@@ -1,3 +1,3 @@
-<%= @game.player_1_name %> attacked  <%= @game.player_2_name %>
+<%= @game.previous_player.name %> attacked  <%= @game.current_turn.name %>
 
 <a href='/play'>OK</a>
