--- a/views/index.erb
+++ b/views/index.erb
@@ -1,6 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+<link rel="stylesheet" type="text/css" href="styles.css">
+</head>
+<body>
 <h1>Battle!</h1>
 <h2>Sign in to play</h2>
-<form action="/names" method="post">
+<form id="name_form" action="/names" method="post">
   <label for="player_1_name">
     Player 1 Name:
     <input type="text" name="player_1_name">
@@ -11,3 +17,5 @@
   </label>
   <input type="submit" value="Submit">
 </form>
+</body>
+</html>
