Adds some html and css styling

--- a/public/styles.css
+++ b/public/styles.css
@@ -1,10 +1,37 @@
+/** {
+  border: 1px dotted red;
+}*/
 
 body {
   background-color: rgb(211, 235, 245);
   font-family: Futura;
   margin: auto;
   width: 60%;
+  text-align: center;
 }
 #name_form {
   padding: 50px;
+}
+
+#player_1_name {
+  position: relative;
+  float: left;
+  width: 33%;
+}
+
+#attack_link {
+  position: relative;
+  float: left;
+  width: 33%;
+}
+
+#player_2_name {
+  position: relative;
+  float: left;
+  width: 33%;
+}
+
+#battle_pic {
+  width: 100%;
+  padding-top: 30px;
 }
